syntax = "proto3";

option go_package = "src/fileservice";

package proto;

message HandshakeRequest {
    string remote_address = 1;
}

message HandshakeResponce {
    string session_uuid = 2;
}

message FileStreamingRequest {
    string session_uuid = 1;
    bool last_frame = 2;
    bytes streaming_frame = 3;
}

message FileStreamingResponce {
    bool ok = 1;
    string error = 2;
}